--- a/index.html
+++ b/index.html
@@ -332,9 +332,10 @@
         <li><span class="dot"></span><a href="https://docs.google.com/document/d/1JSBPkXl_SRYdCyEo5RYXZ1wYJgUFFNRge3Hm1JNtai0/edit?tab=t.0">Week 2 assignment (Find me)</a></li>
         <li><span class="dot"></span><a href="https://abu-assignments.netlify.app/dungeon-crawl.html">Week 3 assignment (Dungeon Crawl)</a></li>
         <li><span class="dot"></span><a href="https://abu-assignments.netlify.app/vlibrary_showcase">Week 4 assignment (Virtual Library)</a></li>
-        <li><span class="dot"></span><a href="https://abu-assignments.netlify.app/team101_documentation.html">Week 6 assignment (Cryptography Project)</a></li>
+        <li><span class="dot"></span><a href="https://abu-assignments.netlify.app/team101_documentation.html">Week 6 (Cryptography Project)</a></li>
         <li><span class="dot"></span><a href="https://abu-assignments.netlify.app/appscript_info.html">Week 7 assignment (App script)</a></li>
         <li><span class="dot"></span><a href="https://abu-assignments.netlify.app/lumen.html">Week 10 assignment (LUMEN)</a></li>
+        <li><span class="dot"></span><a href="https://abu-assignments.netlify.app/project_2/documentation">Week 11 (Project 2)</a></li>
       </ul>
   </div>
 </div>
