--- a/project_2/documentation.html
+++ b/project_2/documentation.html
@@ -12,6 +12,12 @@
     <p class="text-lg mb-8 text-gray-300">
       A modern and minimal Product Requirements Document for a personal to-do list app with user authentication.
     </p>
+    <p class="mb-6">
+  🔗 <a href="https://docs.google.com/document/d/11jD-9ug3t_rUqggUkiDt_Oe-7-MqjPwZRVX1GsOGA8Q/edit?tab=t.0" target="_blank" class="text-teal-400 underline hover:text-teal-300">
+    View original Google Docs PRD
+  </a>
+</p>
+
 
     <div>
       <div class="flex space-x-2 mb-6" id="tabs">
