--- a/index.html
+++ b/index.html
@@ -336,6 +336,7 @@
         <li><span class="dot"></span><a href="https://abu-assignments.netlify.app/appscript_info.html">Week 7 assignment (App script)</a></li>
         <li><span class="dot"></span><a href="https://abu-assignments.netlify.app/lumen.html">Week 10 assignment (LUMEN)</a></li>
         <li><span class="dot"></span><a href="https://abu-assignments.netlify.app/project_2/documentation">Week 11 (Project 2)</a></li>
+        <li><span class="dot"></span><a href="https://abu-assignments.netlify.app/tutored_documentation">Week 13 (AI tutor)</a></li>
       </ul>
   </div>
 </div>
