--- a/todo_dc/documentation.html
+++ b/todo_dc/documentation.html
@@ -17,6 +17,17 @@
       padding: 20px;
       text-align: center;
     }
+    .link-box {
+      text-align: center;
+      padding: 10px 20px;
+      background: #ecf0f1;
+      border-bottom: 1px solid #ddd;
+    }
+    .link-box a {
+      color: #2980b9;
+      font-weight: bold;
+      text-decoration: none;
+    }
     section {
       max-width: 900px;
       margin: auto;
@@ -66,6 +77,12 @@
 <header>
   <h1>📄 To-Do Task Manager – Documentation</h1>
 </header>
+
+<div class="link-box">
+  🔗 <a href="https://docs.google.com/document/d/1-y4nX4Dz9HjdgdxEq5nSc42N8qMG4IIgrfspz0Yitd8/edit?usp=sharing" target="_blank">
+    View Original Documentation on Google Docs
+  </a>
+</div>
 
 <section>
 
@@ -202,4 +219,3 @@
 
 </body>
 </html>
-
