--- a/todo_manager/project_2.html
+++ b/todo_manager/project_2.html
@@ -43,6 +43,10 @@
 </head>
 <body>
   <div class="container">
+    <div style="background-color: #eafaf1; padding: 20px; border-radius: 12px; text-align: center; margin-bottom: 30px; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);">
+      <h2 style="margin: 0; font-size: 20px; color: #2d5c3f;">👨‍💻 Name: <span style="font-weight: bold;">Abu</span> – <span style="font-weight: bold;">2417515</span></h2>
+      <p style="margin: 8px 0 0; font-size: 16px; font-style: italic; color: #333;">Project 2 – <strong>I Did It All By Myself!</strong> 🚀</p>
+    </div>
     <h1>Personal Reflection – To-Do Task Manager</h1>
     <p>
       Working on this to-do task manager project was both rewarding and educational. At first, I expected it to be simple — just a few forms and a task list — but I quickly realized how many small technical decisions and challenges come with even basic web apps.
