--- a/password_rate.html
+++ b/password_rate.html
@@ -1,68 +1,155 @@
 <!DOCTYPE html>
 <html lang="en">
-<head><meta charset="UTF-8"><title>Password Power‑Up Checker</title>
-<style>/* ... (same styling as before) ... */</style>
+<head>
+  <meta charset="UTF-8">
+  <title>Password Cracker Interface</title>
+  <style>
+    body { background-color: #000; color: #00FF00; font-family: 'Courier New', monospace; padding: 20px; }
+    h1 { text-shadow: 0 0 10px #00FF00; }
+    input, button { background: #111; border: 1px solid #00FF00; color: #00FF00; }
+    input { padding: 10px; width: 300px; }
+    button { padding: 10px; margin-left: 10px; cursor: pointer; }
+    .output { background: #111; border: 1px solid #00FF00; padding: 15px; margin-top: 20px; }
+    .meter { height: 20px; background: linear-gradient(to right, red, orange, yellow, green); margin-top: 10px; }
+    .scrollbox { background: #111; border: 1px solid #00FF00; padding: 10px; max-height: 200px; overflow-y: scroll; margin-top: 20px; }
+    li { list-style: none; }
+  </style>
 </head>
 <body>
-  <h1>🔐 Password Power-Up Checker</h1>
-  <input type="text" id="password" placeholder="Enter your password">
-  <button onclick="checkPassword()">Check Strength</button>
-  <div class="result" id="result" style="display: none;"></div>
+  <h1>💀 Hacker Terminal: Password Analyzer</h1>
+  <input type="text" id="password" placeholder="Type password here" oninput="liveCheck()">
+  <button onclick="checkPassword()">Evaluate</button>
+
+  <div class="output" id="result" style="display:none;"></div>
+  <div class="output" id="liveFeedback"></div>
+
+  <h3>🧨 Top 100 Leaked Passwords (real breach data)</h3>
+  <div class="scrollbox">
+    <ul>
+      <li>123456</li><li>123456789</li><li>qwerty</li><li>password</li><li>111111</li>
+      <li>12345678</li><li>abc123</li><li>12345</li><li>1234567890</li><li>password1</li>
+      <li>123123</li><li>iloveyou</li><li>11111111</li><li>qwerty123</li><li>1q2w3e4r</li>
+      <li>admin</li><li>letmein</li><li>welcome</li><li>monkey</li><li>login</li>
+      <li>dragon</li><li>passw0rd</li><li>master</li><li>shadow</li><li>sunshine</li>
+      <li>princess</li><li>azerty</li><li>196909</li><li>trustno1</li><li>654321</li>
+      <li>superman</li><li>1qaz2wsx</li><li>654321</li><li>qazwsx</li><li>lovely</li>
+      <li>football</li><li>admin123</li><li>solo</li><li>welcome1</li><li>1234</li>
+      <li>1q2w3e4r5t</li><li>qwertyuiop</li><li>1111111</li><li>test</li><li>zaq1zaq1</li>
+      <li>987654321</li><li>hello</li><li>freedom</li><li>whatever</li><li>112233</li>
+      <li>1qaz2wsx</li><li>nicole</li><li>jessica</li><li>123qwe</li><li>hottie</li>
+      <li>pokemon</li><li>michael</li><li>computer</li><li>michelle</li><li>daniel</li>
+      <li>randall</li><li>danielle</li><li>buster</li><li>chelsea</li><li>anthony</li>
+      <li>scooter</li><li>andrew</li><li>joshua</li><li>11111</li><li>clifford</li>
+      <li>654321</li><li>password123</li><li>boa.tesla</li><li>q1w2e3r4</li><li>123456a</li>
+      <li>555555</li><li>1111111111</li><li>ashley</li><li>aaaaaa</li><li>hello123</li>
+      <li>chelsea</li><li>chicken</li><li>mylife</li><li>banana</li><li>jordan</li>
+      <li>sunshine1</li><li>loveme</li><li>princess1</li><li>charlie</li><li>qwert</li>
+    </ul>
+  </div>
 
   <script>
-    // 100+ most common passwords from NordPass, SplashData, etc.
-    const common = [
-      "123456","password","12345678","qwerty","123456789","12345","1234567",
-      "football","123123","qwerty123","abc123","monkey","111111","letmein",
-      "dragon","baseball","iloveyou","master","sunshine","ashley","bailey",
-      "welcome","donald","password1","qwerty1","Admin","login","princess",
-      "solo","passw0rd","starwars","123qwe","654321","superman","696969",
-      "shadow","michael","pokemon","qwertyuiop","11111111","freedom","charlie",
-      "anthony","buddy","jennifer","000000","whatever","donald","654321","jordan",
-      "jessica","hunter","mustang","access","ginger","pepper","matthew","testing",
-      "whatever","hello","cool","computer","hello123","daniel","maverick","victoria",
-      "flower","secret","internet","cookie","yellow","secret1","pokemon1","qazwsx",
-      "passw0rd","lovely","robert","soccer","hottie","batman","richard","pizza",
-      "mercedes","jasmine","chelsea","chelsea","summer","matthew","metallica","angel",
-      "nicole","johndoe","link123","linkedin","linkedin1","linkedin123"
-    ];
+    function getEntropy(pw) {
+      let pool = 0;
+      if (/[a-z]/.test(pw)) pool += 26;
+      if (/[A-Z]/.test(pw)) pool += 26;
+      if (/[0-9]/.test(pw)) pool += 10;
+      if (/[^a-zA-Z0-9]/.test(pw)) pool += 32;
+      pool = pool || 1;
+      return pw.length * Math.log2(pool);
+    }
 
-    // Patterns often found in weak passwords
-    const badPatterns = [
-      /(.)\1{2,}/,             // aaa, 111
-      /(123|234|345|456|567|678|789|098)/,  // numeric sequences
-      /(abc|bcd|cde|def|qwe|asd|zxc|qaz|wsx)/i, // keyboard rows
-      /(password|qwerty|admin|login|welcome)/i
-    ];
+    function crackTime(entropy) {
+      const guessesPerSecond = 1e9;
+      const seconds = Math.pow(2, entropy) / guessesPerSecond;
+      if (seconds < 1) return "< 1 second";
+      if (seconds < 60) return Math.floor(seconds) + " seconds";
+      if (seconds < 3600) return Math.floor(seconds / 60) + " minutes";
+      if (seconds < 86400) return Math.floor(seconds / 3600) + " hours";
+      if (seconds < 31536000) return Math.floor(seconds / 86400) + " days";
+      return Math.floor(seconds / 31536000) + " years";
+    }
+
+    const leakedSet = new Set([
+      "123456","123456789","qwerty","password","111111","12345678","abc123","12345",
+      "1234567890","password1","123123","iloveyou","11111111","qwerty123","1q2w3e4r",
+      "admin","letmein","welcome","monkey","login","dragon","passw0rd","master",
+      "shadow","sunshine","princess","azerty","196909","trustno1","654321","superman",
+      "1qaz2wsx","qazwsx","lovely","football","admin123","welcome1","987654321","hello",
+      "freedom","whatever","112233","nicole","jessica","hottie","pokemon","michael",
+      "computer","michelle","daniel","danielle","buster","chelsea","anthony","ashley",
+      "chelsea","banana","jordan","loveme","charlie"
+    ]);
+
+    function evaluate(pw) {
+      let entropy = getEntropy(pw);
+      let time = crackTime(entropy);
+      let isLeaked = leakedSet.has(pw.toLowerCase());
+      let scoreLabel = entropy >= 80 ? "🟩 Strong" : entropy >= 60 ? "🟨 Medium" : "🟥 Weak";
+      return { entropy, time, isLeaked, scoreLabel, length: pw.length };
+    }
+
+    function rateScore(r) {
+      let score = 0;
+      // Entropy (5 pts)
+      if (r.entropy >= 80) score += 5;
+      else if (r.entropy >= 70) score += 4;
+      else if (r.entropy >= 60) score += 3;
+      else if (r.entropy >= 50) score += 2;
+      else score += 1;
+      // Crack time (2 pts)
+      let years = parseInt(r.time);
+      if (r.time.includes("year") && years >= 10) score += 2;
+      else if (r.time.includes("year") && years >= 1) score += 1;
+      // Leaked (2 pts)
+      score += r.isLeaked ? 0 : 2;
+      // Length bonus (1 pt if >=12)
+      if (r.length >= 12) score += 1;
+      score = Math.min(score, 10);
+
+      let label, tip;
+      if (score <= 2) {
+        label = "❌ Totally Unsafe"; tip = "Use longer, complex password.";
+      } else if (score <= 4) {
+        label = "⚠️ Weak"; tip = "Avoid common words or leaked passwords.";
+      } else if (score <= 6) {
+        label = "😐 Okay-ish"; tip = "Add symbols, uppercase & increase length.";
+      } else if (score <= 8) {
+        label = "✅ Strong"; tip = "Good! Consider a mnemonic passphrase.";
+      } else {
+        label = "🧠 Elite-Level"; tip = "Excellent password. Keep it unique.";
+      }
+
+      return { score, label, tip };
+    }
 
     function checkPassword() {
       const pw = document.getElementById('password').value;
-      let total=0, parts=[];
-
-      // Length scoring
-      let ls = pw.length>=16?5: pw.length>=12?4: pw.length>=8?3: pw.length>=5?2: pw.length>0?1:0;
-      parts.push(`Length: ${ls}/5`); total+=ls;
-
-      // Variety scoring
-      const flags = [/[a-z]/.test(pw),/[A-Z]/.test(pw),/[0-9]/.test(pw),/[^a-zA-Z0-9]/.test(pw)];
-      let vs = flags.filter(Boolean).length;
-      vs = vs===4?5:vs===3?4:vs===2?3:vs===1?2:0;
-      parts.push(`Variety: ${vs}/5`); total+=vs;
-
-      // Dictionary check
-      let ds = common.some(w=> pw.toLowerCase().includes(w)) ? 1 : 5;
-      parts.push(`No Dict Words: ${ds}/5`); total+=ds;
-
-      // Unpredictability check
-      let us = badPatterns.some(rx=> rx.test(pw)) ? 2 : 5;
-      parts.push(`Unpredictability: ${us}/5`); total+=us;
-
-      // Feedback
-      let f = total>=17?"Excellent!": total>=13?"Good":"Weak";
-      document.getElementById('result').style.display='block';
+      const r = evaluate(pw);
+      const rs = rateScore(r);
+      document.getElementById('result').style.display = 'block';
       document.getElementById('result').innerHTML = `
-        <p>Total Score: ${total}/20 – ${f}</p>
-        <ul>${parts.map(x=>`<li>${x}</li>`).join('')}</ul>`;
+        <p><strong>Entropy:</strong> ${r.entropy.toFixed(2)} bits</p>
+        <p><strong>Estimated Crack Time:</strong> ${r.time}</p>
+        <p><strong>Strength:</strong> ${r.scoreLabel}</p>
+        <p><strong>Leaked Password:</strong> ${r.isLeaked ? "⚠️ YES - DO NOT USE!" : "✅ No Match"}</p>
+        <div class="meter" style="width: ${Math.min(r.entropy,100)}%;"></div>
+        <p><strong>Score:</strong> ${rs.score}/10</p>
+        <p><strong>Rating:</strong> ${rs.label}</p>
+        <p><strong>Tip:</strong> ${rs.tip}</p>
+      `;
+    }
+
+    function liveCheck() {
+      const pw = document.getElementById('password').value;
+      if (pw.length < 4) {
+        document.getElementById('liveFeedback').innerHTML = "<p>Type more...</p>";
+        return;
+      }
+      const r = evaluate(pw);
+      const rs = rateScore(r);
+      document.getElementById('liveFeedback').innerHTML = `
+        <p>[LIVE] Entropy: ${r.entropy.toFixed(1)} | Crack Time: ${r.time} | Score: ${rs.score}/10 | Leaked: ${r.isLeaked ? "⚠️" : "No"}</p>
+      `;
     }
   </script>
 </body>
