--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
         <li><span class="dot"></span><a href="https://abu-assignments.netlify.app/lumen.html">Week 10 assignment (LUMEN)</a></li>
         <li><span class="dot"></span><a href="https://abu-assignments.netlify.app/todo_manager/project_2">Week 11 (Project 2)</a></li>
         <li><span class="dot"></span><a href="https://abu-assignments.netlify.app/tutored_documentation">Week 13 assignment (AI tutor)</a></li>
-        <li><span class="dot"></span><a href="https://docs.google.com/document/d/1s0B1auMw12zH96_J_bkylNIfWor_cEQtMNMGZ2MO5O0/edit?usp=sharing">Week 16 assignment </a></li>
+        <li><span class="dot"></span><a href="https://docs.google.com/document/d/1s0B1auMw12zH96_J_bkylNIfWor_cEQtMNMGZ2MO5O0/edit?usp=sharing">Week 16 assignment (Password checker) </a></li>
       </ul>
   </div>
 </div>
